--- a/index.html
+++ b/index.html
@@ -267,8 +267,7 @@
         <section class="home_gallery_area p_120">
         	<div class="container">
         		<div class="main_title">
-        			<h2>Our Latest Featured Projects</h2>
-        			<p>Who are in extremely love with eco friendly system.</p>
+        			<h2>Latest Projects</h2>
         		</div>
         		<div class="isotope_fillter">
         			<ul class="gallery_filter list">
@@ -295,19 +294,20 @@
         					</div>
         				</div>
 					</div>
-					<div class="col-lg-4 col-md-4 col-sm-6 website">
+					<div class="col-lg-4 col-md-4 col-sm-6 android augmented">
         				<div class="h_gallery_item">
         					<div class="g_img_item">
         						<img class="img-fluid" src="img/gallery/2.jpg" alt="">
         						<a class="light" href="img/gallery/2.jpg"><img src="img/gallery/icon.png" alt=""></a>
         					</div>
         					<div class="g_item_text">
-        						<h4>Muara Enim Cerdas III</h4>
-        						<p>Creating a web a training activity of service teachers spearheaded by Muara Enim District Education Office</p>
+        						<h4>Augmented Reality Mutiara Barangan Residance</h4>
+        						<p>Creating a mobile digital marketing application that applies augmented reality technology to Mutiara Barangan Palembang residence. This system is tested with an experiential marketing.
+								</p>
         					</div>
         				</div>
         			</div>
-        			<div class="col-lg-4 col-md-4 col-sm-6 manipul creative design print">
+        			<div class="col-lg-4 col-md-4 col-sm-6 website virtual">
         				<div class="h_gallery_item">
         					<div class="g_img_item">
         						<img class="img-fluid" src="img/gallery/3.jpg" alt="">
@@ -320,7 +320,7 @@
         					</div>
         				</div>
         			</div>
-        			<div class="col-lg-4 col-md-4 col-sm-6 brand creative print">
+        			<div class="col-lg-4 col-md-4 col-sm-6 android">
         				<div class="h_gallery_item">
         					<div class="g_img_item">
         						<img class="img-fluid" src="img/gallery/4.jpg" alt="">
@@ -332,7 +332,7 @@
         					</div>
         				</div>
         			</div>
-        			<div class="col-lg-4 col-md-4 col-sm-6 brand manipul design">
+        			<div class="col-lg-4 col-md-4 col-sm-6 website">
         				<div class="h_gallery_item">
         					<div class="g_img_item">
         						<img class="img-fluid" src="img/gallery/5.jpg" alt="">
@@ -344,7 +344,7 @@
         					</div>
         				</div>
         			</div>
-        			<div class="col-lg-4 col-md-4 col-sm-6 brand creative">
+        			<div class="col-lg-4 col-md-4 col-sm-6 website data">
         				<div class="h_gallery_item">
         					<div class="g_img_item">
         						<img class="img-fluid" src="img/gallery/6.jpg" alt="">
@@ -356,7 +356,7 @@
         					</div>
         				</div>
 					</div>
-					<div class="col-lg-4 col-md-4 col-sm-6 website">
+					<div class="col-lg-4 col-md-4 col-sm-6 website data">
 						<div class="h_gallery_item">
 							<div class="g_img_item">
 								<img class="img-fluid" src="img/gallery/7.jpg" alt="">
