--- a/index.html
+++ b/index.html
@@ -285,8 +285,8 @@
         			<div class="col-lg-4 col-md-4 col-sm-6 website">
         				<div class="h_gallery_item">
         					<div class="g_img_item">
-        						<img class="img-fluid" src="img/gallery/1.jpg" alt="">
-        						<a class="light" href="img/gallery/1.jpg"><img src="img/gallery/icon.png" alt=""></a>
+        						<img class="img-fluid" src="img/gallery/1-min.jpg" alt="">
+        						<a class="light" href="img/gallery/1-min.jpg"><img src="img/gallery/icon.png" alt=""></a>
         					</div>
         					<div class="g_item_text">
         						<h4>Muara Enim Cerdas III</h4>
@@ -297,8 +297,8 @@
 					<div class="col-lg-4 col-md-4 col-sm-6 android augmented">
         				<div class="h_gallery_item">
         					<div class="g_img_item">
-        						<img class="img-fluid" src="img/gallery/2.jpg" alt="">
-        						<a class="light" href="img/gallery/2.jpg"><img src="img/gallery/icon.png" alt=""></a>
+        						<img class="img-fluid" src="img/gallery/2-min.jpg" alt="">
+        						<a class="light" href="img/gallery/2-min.jpg"><img src="img/gallery/icon.png" alt=""></a>
         					</div>
         					<div class="g_item_text">
         						<h4>Augmented Reality Mutiara Barangan Residance</h4>
@@ -310,8 +310,8 @@
         			<div class="col-lg-4 col-md-4 col-sm-6 website virtual">
         				<div class="h_gallery_item">
         					<div class="g_img_item">
-        						<img class="img-fluid" src="img/gallery/3.jpg" alt="">
-        						<a class="light" href="img/gallery/3.jpg"><img src="img/gallery/icon.png" alt=""></a>
+        						<img class="img-fluid" src="img/gallery/3-min.jpg" alt="">
+        						<a class="light" href="img/gallery/3-min.jpg"><img src="img/gallery/icon.png" alt=""></a>
         					</div>
         					<div class="g_item_text">
         						<h4>Museum Balaputra Dewa</h4>
@@ -323,8 +323,8 @@
         			<div class="col-lg-4 col-md-4 col-sm-6 android">
         				<div class="h_gallery_item">
         					<div class="g_img_item">
-        						<img class="img-fluid" src="img/gallery/4.jpg" alt="">
-        						<a class="light" href="img/gallery/4.jpg"><img src="img/gallery/icon.png" alt=""></a>
+        						<img class="img-fluid" src="img/gallery/4-min.jpg" alt="">
+        						<a class="light" href="img/gallery/4-min.jpg"><img src="img/gallery/icon.png" alt=""></a>
         					</div>
         					<div class="g_item_text">
         						<h4>Seabox</h4>
@@ -335,8 +335,8 @@
         			<div class="col-lg-4 col-md-4 col-sm-6 website">
         				<div class="h_gallery_item">
         					<div class="g_img_item">
-        						<img class="img-fluid" src="img/gallery/5.jpg" alt="">
-        						<a class="light" href="img/gallery/5.jpg"><img src="img/gallery/icon.png" alt=""></a>
+        						<img class="img-fluid" src="img/gallery/5-min.jpg" alt="">
+        						<a class="light" href="img/gallery/5-min.jpg"><img src="img/gallery/icon.png" alt=""></a>
         					</div>
         					<div class="g_item_text">
         						<h4>Hi Campus</h4>
@@ -347,8 +347,8 @@
         			<div class="col-lg-4 col-md-4 col-sm-6 website data">
         				<div class="h_gallery_item">
         					<div class="g_img_item">
-        						<img class="img-fluid" src="img/gallery/6.jpg" alt="">
-        						<a class="light" href="img/gallery/6.jpg"><img src="img/gallery/icon.png" alt=""></a>
+        						<img class="img-fluid" src="img/gallery/6-min.jpg" alt="">
+        						<a class="light" href="img/gallery/6-min.jpg"><img src="img/gallery/icon.png" alt=""></a>
         					</div>
         					<div class="g_item_text">
         						<h4>Kontarakan.id</h4>
@@ -359,8 +359,8 @@
 					<div class="col-lg-4 col-md-4 col-sm-6 website data">
 						<div class="h_gallery_item">
 							<div class="g_img_item">
-								<img class="img-fluid" src="img/gallery/7.jpg" alt="">
-								<a class="light" href="img/gallery/7.jpg"><img src="img/gallery/icon.png" alt=""></a>
+								<img class="img-fluid" src="img/gallery/7-min.jpg" alt="">
+								<a class="light" href="img/gallery/7-min.jpg"><img src="img/gallery/icon.png" alt=""></a>
 							</div>
 							<div class="g_item_text">
 								<h4>Belt Scale PTBA</h4>
@@ -371,8 +371,8 @@
 					<div class="col-lg-4 col-md-4 col-sm-6 website">
 						<div class="h_gallery_item">
 							<div class="g_img_item">
-								<img class="img-fluid" src="img/gallery/8.jpg" alt="">
-								<a class="light" href="img/gallery/8.jpg"><img src="img/gallery/icon.png" alt=""></a>
+								<img class="img-fluid" src="img/gallery/8-min.jpg" alt="">
+								<a class="light" href="img/gallery/8-min.jpg"><img src="img/gallery/icon.png" alt=""></a>
 							</div>
 							<div class="g_item_text">
 								<h4>SAPA Fasilkom</h4>
@@ -383,8 +383,8 @@
 					<div class="col-lg-4 col-md-4 col-sm-6 website">
 						<div class="h_gallery_item">
 							<div class="g_img_item">
-								<img class="img-fluid" src="img/gallery/9.jpg" alt="">
-								<a class="light" href="img/gallery/9.jpg"><img src="img/gallery/icon.png" alt=""></a>
+								<img class="img-fluid" src="img/gallery/9-min.jpg" alt="">
+								<a class="light" href="img/gallery/9-min.jpg"><img src="img/gallery/icon.png" alt=""></a>
 							</div>
 							<div class="g_item_text">
 								<h4>E-Voting SMA Unggul N 4 Lahat</h4>
@@ -395,8 +395,8 @@
 					<div class="col-lg-4 col-md-4 col-sm-6 website">
 						<div class="h_gallery_item">
 							<div class="g_img_item">
-								<img class="img-fluid" src="img/gallery/10.jpg" alt="">
-								<a class="light" href="img/gallery/10.jpg"><img src="img/gallery/icon.png" alt=""></a>
+								<img class="img-fluid" src="img/gallery/10-min.jpg" alt="">
+								<a class="light" href="img/gallery/10-min.jpg"><img src="img/gallery/icon.png" alt=""></a>
 							</div>
 							<div class="g_item_text">
 								<h4>WEB Fasilkom Unsri</h4>
@@ -409,43 +409,43 @@
 						<h3 class="title_color">Certificate</h3>
 						<div class="row gallery-item">
 							<div class="col-md-4">
-								<a href="img/elements/1.jpg" class="img-gal"><div class="single-gallery-image" style="background: url(img/elements/1.jpg);"></div></a>
+								<a href="img/elements/1-min.jpg" class="img-gal"><div class="single-gallery-image" style="background: url(img/elements/1-min.jpg);"></div></a>
 							</div>
 							<div class="col-md-4">
-								<a href="img/elements/2.jpg" class="img-gal"><div class="single-gallery-image" style="background: url(img/elements/2.jpg);"></div></a>
+								<a href="img/elements/2-min.jpg" class="img-gal"><div class="single-gallery-image" style="background: url(img/elements/2-min.jpg);"></div></a>
 							</div>
 							<div class="col-md-4">
-								<a href="img/elements/3.jpg" class="img-gal"><div class="single-gallery-image" style="background: url(img/elements/3.jpg);"></div></a>
+								<a href="img/elements/3-min.jpg" class="img-gal"><div class="single-gallery-image" style="background: url(img/elements/3-min.jpg);"></div></a>
 							</div>
 							<div class="col-md-6">
-								<a href="img/elements/4.jpg" class="img-gal"><div class="single-gallery-image" style="background: url(img/elements/4.jpg);"></div></a>
+								<a href="img/elements/4-min.jpg" class="img-gal"><div class="single-gallery-image" style="background: url(img/elements/4-min.jpg);"></div></a>
 							</div>
 							<div class="col-md-6">
-								<a href="img/elements/5.jpg" class="img-gal"><div class="single-gallery-image" style="background: url(img/elements/5.jpg);"></div></a>
+								<a href="img/elements/5-min.jpg" class="img-gal"><div class="single-gallery-image" style="background: url(img/elements/5-min.jpg);"></div></a>
 							</div>
 							<div class="col-md-4">
-								<a href="img/elements/6.jpg" class="img-gal"><div class="single-gallery-image" style="background: url(img/elements/6.jpg);"></div></a>
+								<a href="img/elements/6-min.jpg" class="img-gal"><div class="single-gallery-image" style="background: url(img/elements/6-min.jpg);"></div></a>
 							</div>
 							<div class="col-md-4">
-								<a href="img/elements/7.jpg" class="img-gal"><div class="single-gallery-image" style="background: url(img/elements/7.jpg);"></div></a>
+								<a href="img/elements/7-min.jpg" class="img-gal"><div class="single-gallery-image" style="background: url(img/elements/7-min.jpg);"></div></a>
 							</div>
 							<div class="col-md-4">
-								<a href="img/elements/8.jpg" class="img-gal"><div class="single-gallery-image" style="background: url(img/elements/8.jpg);"></div></a>
+								<a href="img/elements/8-min.jpg" class="img-gal"><div class="single-gallery-image" style="background: url(img/elements/8-min.jpg);"></div></a>
 							</div>
 							<div class="col-md-4">
-								<a href="img/elements/9.jpg" class="img-gal"><div class="single-gallery-image" style="background: url(img/elements/9.jpg);"></div></a>
+								<a href="img/elements/9-min.jpg" class="img-gal"><div class="single-gallery-image" style="background: url(img/elements/9-min.jpg);"></div></a>
 							</div>
 							<div class="col-md-4">
-								<a href="img/elements/10.jpg" class="img-gal"><div class="single-gallery-image" style="background: url(img/elements/10.jpg);"></div></a>
+								<a href="img/elements/10-min.jpg" class="img-gal"><div class="single-gallery-image" style="background: url(img/elements/10-min.jpg);"></div></a>
 							</div>
 							<div class="col-md-4">
-								<a href="img/elements/11.jpg" class="img-gal"><div class="single-gallery-image" style="background: url(img/elements/11.jpg);"></div></a>
+								<a href="img/elements/11-min.jpg" class="img-gal"><div class="single-gallery-image" style="background: url(img/elements/11-min.jpg);"></div></a>
 							</div>
 							<div class="col-md-4">
-								<a href="img/elements/12.jpg" class="img-gal"><div class="single-gallery-image" style="background: url(img/elements/12.jpg);"></div></a>
+								<a href="img/elements/12-min.jpg" class="img-gal"><div class="single-gallery-image" style="background: url(img/elements/12-min.jpg);"></div></a>
 							</div>
 							<div class="col-md-4">
-								<a href="img/elements/13.jpg" class="img-gal"><div class="single-gallery-image" style="background: url(img/elements/13.jpg);"></div></a>
+								<a href="img/elements/13-min.jpg" class="img-gal"><div class="single-gallery-image" style="background: url(img/elements/13-min.jpg);"></div></a>
 							</div>
 						</div>
 					</div>
