--- a/index.html
+++ b/index.html
@@ -282,6 +282,18 @@
         	</div>
         	<div class="container">
         		<div class="gallery_f_inner row imageGallery1">
+						<div class="col-lg-4 col-md-4 col-sm-6 android">
+								<div class="h_gallery_item">
+									<div class="g_img_item">
+										<img class="img-fluid" src="img/gallery/evote.png" alt="">
+										<a class="light" href="img/gallery/evote.png"><img src="img/gallery/icon.png" alt=""></a>
+									</div>
+									<div class="g_item_text">
+										<h4>E-Voting</h4>
+										<p>Android Application for student council election </p>
+									</div>
+								</div>
+							</div>
         			<div class="col-lg-4 col-md-4 col-sm-6 website">
         				<div class="h_gallery_item">
         					<div class="g_img_item">
