--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
 								<div class="h_gallery_item">
 									<div class="g_img_item">
 										<img class="img-fluid" src="img/gallery/evote.png" alt="">
-										<a class="light" href="img/gallery/evote.png"><img src="img/gallery/icon.png" alt=""></a>
+										<a class="light" href="https://github.com/akbaralzaini/evoting"><img src="img/gallery/icon.png" alt=""></a>
 									</div>
 									<div class="g_item_text">
 										<h4>E-Voting</h4>
@@ -309,7 +309,7 @@
         				<div class="h_gallery_item">
         					<div class="g_img_item">
         						<img class="img-fluid" src="img/gallery/2-min.jpg" alt="">
-        						<a class="light" href="img/gallery/2-min.jpg"><img src="img/gallery/icon.png" alt=""></a>
+        						<a class="light" href="https://play.google.com/store/apps/details?id=project.akbaralzaini.visitindonesia"><img src="img/gallery/icon.png" alt=""></a>
         					</div>
         					<div class="g_item_text">
         						<h4>Augmented Reality Mutiara Barangan Residance</h4>
