--- a/index.html
+++ b/index.html
@@ -281,18 +281,30 @@
         	</div>
         	<div class="container">
         		<div class="gallery_f_inner row imageGallery1">
-						<div class="col-lg-4 col-md-4 col-sm-6 android">
-								<div class="h_gallery_item">
-									<div class="g_img_item">
-										<img class="img-fluid" src="img/gallery/evote.png" alt="">
-										<a class="light" href="https://github.com/akbaralzaini/evoting"><img src="img/gallery/icon.png" alt=""></a>
-									</div>
-									<div class="g_item_text">
-										<h4>E-Voting</h4>
-										<p>Android Application for student council election </p>
-									</div>
-								</div>
+        			<div class="col-lg-4 col-md-4 col-sm-6 android">
+						<div class="h_gallery_item">
+							<div class="g_img_item">
+								<img class="img-fluid" src="img/gallery/laundry.png" alt="">
+								<a class="light" href="img/gallery/laundry.png"><img src="img/gallery/icon.png" alt=""></a>
 							</div>
+							<div class="g_item_text">
+								<h4>Laundryku</h4>
+								<p>Android Application for laundry shops and consumers</p>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-4 col-md-4 col-sm-6 android">
+						<div class="h_gallery_item">
+							<div class="g_img_item">
+								<img class="img-fluid" src="img/gallery/evote.png" alt="">
+								<a class="light" href="img/gallery/evote.png"><img src="img/gallery/icon.png" alt=""></a>
+							</div>
+							<div class="g_item_text">
+								<h4>E-Voting</h4>
+								<p>Android Application for student council election </p>
+							</div>
+						</div>
+					</div>
         			<div class="col-lg-4 col-md-4 col-sm-6 website">
         				<div class="h_gallery_item">
         					<div class="g_img_item">
@@ -309,7 +321,7 @@
         				<div class="h_gallery_item">
         					<div class="g_img_item">
         						<img class="img-fluid" src="img/gallery/2-min.jpg" alt="">
-        						<a class="light" href="https://play.google.com/store/apps/details?id=project.akbaralzaini.visitindonesia"><img src="img/gallery/icon.png" alt=""></a>
+        						<a class="light" href="img/gallery/2-min.jpg"><img src="img/gallery/icon.png" alt=""></a>
         					</div>
         					<div class="g_item_text">
         						<h4>Augmented Reality Mutiara Barangan Residance</h4>
