--- a/index.html
+++ b/index.html
@@ -284,8 +284,8 @@
         			<div class="col-lg-4 col-md-4 col-sm-6 android">
 						<div class="h_gallery_item">
 							<div class="g_img_item">
-								<img class="img-fluid" src="img/gallery/laundry.png" alt="">
-								<a class="light" href="img/gallery/laundry.png"><img src="img/gallery/icon.png" alt=""></a>
+								<img class="img-fluid" src="img/gallery/laundry.jpg" alt="">
+								<a class="light" href="img/gallery/laundry.jpg"><img src="img/gallery/icon.png" alt=""></a>
 							</div>
 							<div class="g_item_text">
 								<h4>Laundryku</h4>
@@ -296,8 +296,8 @@
 					<div class="col-lg-4 col-md-4 col-sm-6 android">
 						<div class="h_gallery_item">
 							<div class="g_img_item">
-								<img class="img-fluid" src="img/gallery/evote.jpg" alt="">
-								<a class="light" href="img/gallery/evote.jpg"><img src="img/gallery/icon.png" alt=""></a>
+								<img class="img-fluid" src="img/gallery/evote.png" alt="">
+								<a class="light" href="img/gallery/evote.png"><img src="img/gallery/icon.png" alt=""></a>
 							</div>
 							<div class="g_item_text">
 								<h4>E-Voting</h4>
