--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
 								<div class="personal_text">
 									<h6>Hello Everybody, i am</h6>
 									<h3>AKBAR AL ZAINI</h3>
-									<h4>Fresh Graduate of Information Systems</h4>
-									<p>Bachelor Degree of Information Systems From Sriwijaya University</p>
+									<h4>Bachelor Degree of Information Systems</h4>
+									<p>Sriwijaya University</p>
 									<ul class="list basic_info">
-										<li><a href="#"><i class="lnr lnr-calendar-full"></i> 11 March 1999</a></li>
+										<li><a href="#"><i class="lnr lnr-calendar-full"></i> 22 years old</a></li>
 										<li><a href="#"><i class="lnr lnr-envelope"></i> akbaralzaini@gmail.com</a></li>
 										<li><a href="#"><i class="lnr lnr-home"></i>South Sumatera, Indonesia</a></li>
 									</ul>
@@ -85,7 +85,7 @@
         			<div class="col-lg-6">
         				<div class="welcome_text">
         					<h4>SUMMARY</h4>
-        					<p>I’m a Fresh graduate of information system. passioned in learning new things, problem-solving, logical & analytical thinking. I am capable with PHP frameworks, Javascript, Java, C#, SQL and git. I had experienced in developing website and android application. Currently, I am interested in learning about Flutter and Kotlin. I enjoy gardening in my spare time.
+        					<p>I’m a Bachelor Degree of information system. passioned in learning new things, problem-solving, logical & analytical thinking. I am capable with PHP frameworks, Javascript, Java, C#, SQL and git. I had experienced in developing website and android application. Currently, I am interested in learning about Flutter and Kotlin. I enjoy gardening in my spare time.
 							</p>
         				</div>
         			</div>
@@ -209,6 +209,32 @@
 											<h4>Web developer
 											</h4>
 											<p>museum Balaputra Dewa</p>
+										</div>
+									</div>
+								</li>
+								<li>
+									<span></span>
+									<div class="media">
+										<div class="d-flex">
+											<p>Okt 2020 – Okt 2021 </p>
+										</div>
+										<div class="media-body">
+											<h4>IT Profesional Development Program
+											</h4>
+											<p>PT BCA Finance</p>
+										</div>
+									</div>
+								</li>
+								<li>
+									<span></span>
+									<div class="media">
+										<div class="d-flex">
+											<p>Okt 2021 – current </p>
+										</div>
+										<div class="media-body">
+											<h4>IT System Management - NonCore Application Development
+											</h4>
+											<p>PT BCA Finance</p>
 										</div>
 									</div>
 								</li>
@@ -431,6 +457,12 @@
 				<div class="section-top-border" style="margin-top: 30px">
 						<h3 class="title_color">Certificate</h3>
 						<div class="row gallery-item">
+							<div class="col-md-4">
+								<a href="img/elements/full.png" class="img-gal"><div class="single-gallery-image" style="background: url(img/elements/1-min.jpg);"></div></a>
+							</div>
+							<div class="col-md-4">
+								<a href="img/elements/javaandroid.png" class="img-gal"><div class="single-gallery-image" style="background: url(img/elements/1-min.jpg);"></div></a>
+							</div>
 							<div class="col-md-4">
 								<a href="img/elements/1-min.jpg" class="img-gal"><div class="single-gallery-image" style="background: url(img/elements/1-min.jpg);"></div></a>
 							</div>
