--- a/index.html
+++ b/index.html
@@ -458,10 +458,10 @@
 						<h3 class="title_color">Certificate</h3>
 						<div class="row gallery-item">
 							<div class="col-md-4">
-								<a href="img/elements/full.png" class="img-gal"><div class="single-gallery-image" style="background: url(img/elements/1-min.jpg);"></div></a>
+								<a href="img/elements/full.png" class="img-gal"><div class="single-gallery-image" style="background: url(img/elements/full.png);"></div></a>
 							</div>
 							<div class="col-md-4">
-								<a href="img/elements/javaandroid.png" class="img-gal"><div class="single-gallery-image" style="background: url(img/elements/1-min.jpg);"></div></a>
+								<a href="img/elements/javaandroid.png" class="img-gal"><div class="single-gallery-image" style="background: url(img/elements/javaandroid.png);"></div></a>
 							</div>
 							<div class="col-md-4">
 								<a href="img/elements/1-min.jpg" class="img-gal"><div class="single-gallery-image" style="background: url(img/elements/1-min.jpg);"></div></a>
