--- a/index.html
+++ b/index.html
@@ -35,12 +35,11 @@
 								<div class="personal_text">
 									<h6>Hello Everybody, i am</h6>
 									<h3>AKBAR AL ZAINI</h3>
-									<h4>Bachelor Degree of Information Systems</h4>
-									<p>Sriwijaya University</p>
+									<h4>Technical Project Manager</h4>
 									<ul class="list basic_info">
 										<li><a href="#"><i class="lnr lnr-calendar-full"></i> 25 years old</a></li>
 										<li><a href="#"><i class="lnr lnr-envelope"></i> akbaralzaini@gmail.com</a></li>
-										<li><a href="#"><i class="lnr lnr-home"></i>South Sumatera, Indonesia</a></li>
+										<li><a href="#"><i class="lnr lnr-home"></i>Jakarta, Indonesia</a></li>
 									</ul>
 									<ul class="list personal_social">
 										<li><a href="https://www.linkedin.com/in/akbar-al-zaini-2238b1166/"><i class="fa fa-linkedin"></i></a></li>
@@ -61,7 +60,7 @@
         			<div class="col-lg-6">
         				<div class="welcome_text">
         					<h4>SUMMARY</h4>
-        					<p>I’m a Bachelor Degree of information system. passioned in learning new things, problem-solving, logical & analytical thinking. I am capable with PHP frameworks, Javascript, Java, C#, SQL and git. I had experienced in developing website and android application. Currently, I am interested in learning about Flutter and Kotlin. I enjoy gardening in my spare time.
+        					<p>A Technical Project Manager with deep expertise in middleware, API Management, and mobile applications, with a demonstrated history of leading complex projects from the ground up, ensuring on-time delivery and exceptional outcomes. Experienced in developing project workflows, identifying risks, and designing controls and mitigation strategies aligned with corporate governance. My extensive technical skills, strong problem-solving, logical, and analytical abilities, combined with a passion for learning, drive my success in this field. I am a dedicated and innovative team member, committed to achieving exceptional results for any organization
 							</p>
         				</div>
         			</div>
@@ -69,7 +68,7 @@
         				<div class="tools_expert">
         					<div class="skill_main">
 								<div class="skill_item">
-									<h4>Web Development <span class="counter">90</span>%</h4>
+									<h4>Project Management<span class="counter">90</span>%</h4>
 									<div class="progress_br">
 										<div class="progress">
 											<div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
@@ -77,7 +76,7 @@
 									</div>
 								</div>
 								<div class="skill_item">
-									<h4>Android Development <span class="counter">80</span>%</h4>
+									<h4>Techincal Analist<span class="counter">90</span>%</h4>
 									<div class="progress_br">
 										<div class="progress">
 											<div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
@@ -85,18 +84,10 @@
 									</div>
 								</div>
 								<div class="skill_item">
-									<h4>System Analist <span class="counter">90</span>%</h4>
+									<h4>System architecture<span class="counter">90</span>%</h4>
 									<div class="progress_br">
 										<div class="progress">
 											<div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
-										</div>
-									</div>
-								</div>
-								<div class="skill_item">
-									<h4>Augmented And Virtual Relity <span class="counter">95</span>%</h4>
-									<div class="progress_br">
-										<div class="progress">
-											<div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
 										</div>
 									</div>
 								</div>
@@ -105,14 +96,6 @@
 									<div class="progress_br">
 										<div class="progress">
 											<div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
-										</div>
-									</div>
-								</div>
-								<div class="skill_item">
-									<h4>Data Mining <span class="counter">75</span>%</h4>
-									<div class="progress_br">
-										<div class="progress">
-											<div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
 										</div>
 									</div>
 								</div>
@@ -143,11 +126,11 @@
 									<span></span>
 									<div class="media">
 										<div class="d-flex">
-											<p>Jun 2018 – Jul 2018 </p>
+											<p>June 2023 – current </p>
 										</div>
 										<div class="media-body">
-											<h4>Internship</h4>
-											<p>PT Bukit Asam Tbk</p>
+											<h4>Techincal Project Manager</h4>
+											<p>PT Bank Danamon Indonesia</p>
 										</div>
 									</div>
 								</li>
@@ -155,36 +138,11 @@
 									<span></span>
 									<div class="media">
 										<div class="d-flex">
-											<p>Jan 2018 – Dec 2019 </p>
+											<p>Oct 2021 – June 2023</p>
 										</div>
 										<div class="media-body">
-											<h4>Lab Assistant</h4>
-											<p>Multimedia & Programming lab in faculty of computer science. </p>
-										</div>
-									</div>
-								</li>
-								<li>
-									<span></span>
-									<div class="media">
-										<div class="d-flex">
-											<p>Aug 2019 – Dec 2019 </p>
-										</div>
-										<div class="media-body">
-											<h4>Web developer </h4>
-											<p>Muara Enim Cerdas III</p>
-										</div>
-									</div>
-								</li>
-								<li>
-									<span></span>
-									<div class="media">
-										<div class="d-flex">
-											<p>Jan 2019 – Feb 2019 </p>
-										</div>
-										<div class="media-body">
-											<h4>Web developer
-											</h4>
-											<p>museum Balaputra Dewa</p>
+											<h4>Project Manager Mobile and Web Integration</h4>
+											<p>PT BCA Finance</p>
 										</div>
 									</div>
 								</li>
@@ -202,18 +160,6 @@
 									</div>
 								</li>
 								<li>
-									<span></span>
-									<div class="media">
-										<div class="d-flex">
-											<p>Okt 2021 – current </p>
-										</div>
-										<div class="media-body">
-											<h4>IT System Management - NonCore Application Development
-											</h4>
-											<p>PT BCA Finance</p>
-										</div>
-									</div>
-								</li>
 							</ul>
 						</div>
 						<div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
